  Minor Features:
    - Teleportation to hex cores now works while inside a spidertron or other vehicle, bringing the vehicle with you.
    - Added hotkeys for opening/closing the questbook, catalog, and trade overview.
    - Added button in the catalog for opening the trade overview with the selected item set in the filter, the side depending on what remains to be done for ranking up the item.
  Bugfixes:
    - Fixed that dungeon laser and tesla turrets were frozen on Aquilo.
    - Fixed rare crash with GUI management.
  Changes:
    - Swapped the meanings of the bronze star halves in item ranks.
  Balancing:
    - The Quantum Bazaar no longer lets you buy items of qualities that you haven't yet unlocked.  Selling items of locked qualities is still allowed.
    - Fixed that "upgrade all item buffs" could get stuck in an infinite loop and crash the game.
  Gui:
    - Added notes to the rewards unlocking the sink and generator modes to indicate the trade-offs of using them, allowing for a more concise description of each mode.
    - Changed the checkmarks and X's for the buy/sell rank-up instructions to checkboxes which check off and gray out when completed.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 6/12/25
  Bugfixes:
    - Fixed that quest progress was getting reset upon updating to some versions of the mod.
        This version recalculates some important quest progress like catalog completion.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 6/12/25
  Major Features:
    - Added the electromagnetic penetrator handheld weapon.
  Minor Features:
    - Added the "ping in chat" button for trades in the trade overview.
    - Added mod settings for tweaking trade productivity requirements for ranking up items.
    - Added mod settings for scaling dungeon chest loot value.
  Changes: